tests/negative/test_expr_asgn_cn.orb
fnc main() {
    i32 cn x = 100;
    x += 1;
}